--- a/src/app/views/auth/signin.njk
+++ b/src/app/views/auth/signin.njk
@@ -3,8 +3,10 @@
 {% block body %}
   <form action="/signin" method="post" >
   <img src="/images/logo.svg" height="42"/>
+
     <input type="email" name="email" placeholder="Seu e-mail">
     <input type="password" name="password" placeholder="Senha secreta">
+  {% include "_partials/flash.njk"%}
 
     <button type="submit">Entrar</button>
 
