--- a/src/app/views/dashboard.njk
+++ b/src/app/views/dashboard.njk
@@ -1,4 +1,18 @@
 {% extends "_layouts/default.njk" %} {% block body %}
-<h1>Olá , {{ user.name }}</h1>
-<a href="/app/logout">sair</a>
+<div class="content">
+  <strong>Olá, {{ user.name }}</strong>
+  <p>Inicie um agendamento escolhendo um proffisional abaixo:</p>
+  <ul class="providers">
+    {%for provider in providers%}
+    <li class="provider">
+      <div>
+        <img src="" alt="" />
+        <strong>{{ provider.name }}</strong>
+      </div>
+      <a href="">+</a>
+    </li>
+    {%endfor%}
+  </ul>
+  <a href="/app/logout" class="logout">Sair</a>
+</div>
 {% endblock %}
