--- a/src/app/views/dashboard.njk
+++ b/src/app/views/dashboard.njk
@@ -9,10 +9,13 @@
         <img src="/files/{{ provider.avatar }}" alt="" />
         <strong>{{ provider.name }}</strong>
       </div>
-      <a href="">+</a>
+      <a href="/app/appointments/new/{{ provider.id }}">+</a>
     </li>
     {%endfor%}
   </ul>
+  {% if (user.provider === true) %}
+  <a href="/app/schedule">Meus agendamentos</a>
+  {% endif %}
   <a href="/app/logout" class="logout">Sair</a>
 </div>
 {% endblock %}
